; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-math/src/extr_math.c_math_frexp.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-math/src/extr_math.c_math_frexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @math_frexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @math_frexp(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @mrb_get_args(i32* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %5)
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @frexp(i32 %9, i32* %6)
  store i32 %10, i32* %5, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @mrb_float_value(i32* %12, i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @mrb_fixnum_value(i32 %15)
  %17 = call i32 @mrb_assoc_new(i32* %11, i32 %14, i32 %16)
  ret i32 %17
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*) #1

declare dso_local i32 @frexp(i32, i32*) #1

declare dso_local i32 @mrb_assoc_new(i32*, i32, i32) #1

declare dso_local i32 @mrb_float_value(i32*, i32) #1

declare dso_local i32 @mrb_fixnum_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
